fix: multiply h4, bold links in home panels
h4s overlap with text sometimes.
.home-panel-set is for the new layout. Bold links will stand out better.

--- a/src/css/_03-generic.scss
+++ b/src/css/_03-generic.scss
@@ -160,6 +160,23 @@ body.home .entry-header {
     color: var(--color-brandWhite);
 }
 
+// HOME PAGE
+
+.entry .entry-content .home-panel-set {
+
+    & a {
+        font-weight: 700;
+    }
+
+    & a:hover {
+        font-weight: 700;
+    }
+
+    & a:active {
+        font-weight: 700;
+    }
+}
+
 // Remove margins from homepage video block
 .home .entry-content .wp-block-cover:first-child {
     margin-top: 0;
